CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 3:
  more GRIB ensemble work
  cdmremote working again
  composite stations work correctly
 2:
  StationPointFeature, StationCollection.flatten
  catalog2 refactor
 1:
  GRIB library 8.0
  Back out DateUnit changes - too many small glitches - revert to 4.0 code base
  UAMIVServiceProvider looks for camxproj.txt for config info
  ScaleMissingEnhance: assume if forVar isUnsigned, data conversion should use unsigned data, regardless of orgVar
  Contiguous Table : dont add startRaggedArray variable, keep internal
  GridCoordSys.convertUnits(): convert to DOUBLE to avoid loss of precision
  NetcdfDataset calls CoordSysBuilder.augmentDataset(), then processes scale/missing, then calls buildCoordSys()
  Variable.slice() : ok on record dimension size = 0
  FeatureDatasetPointXML for creating capabilities document for FeatureDataset
  Try to make nested Table configuration XML
  NcStreamRemote -> CdmRemote
 0:
  GridDataset: getVariables() only returns the grids
  AggExistingOne : make time coord into a String
  DODNetcdfFile: workaround for Grid HDF4 wierdness (Float64 Longitude[fakeDim2 = 8192])
  InvDatasetImpl : check if parent is null  
  VariableDS only sets orgDataType when its wrapping a variable.
  AggregationOuterDimension tolerates different types between main variable and nested
  AggregationOuterDimension.cacheVar may keep data as different type, make sure to convert to correct type in read()
  MAMath.convert - utility routine for converting Arrays to different types.
  Cosmic data - FeatureType plug
  AggregationOuterDimension.rebuildDatasets(): bug on updating datasets, assuming agg vars are 1D (!)
  HDF4 images use unshared dimensions
  ToolsUI/IOSP/HDF4
  CFConventions look for standard name attribute for latitude / longitude    
  GridCoordSys: 2D Coordinate Systems now can find index (i,j) from (lat, lon) coord